testsuite/tests/generics/GenCannotDoRep1Model_0.stderr

GenCannotDoRep1Model_0.hs:14:65: error:
    • Can't make a derived instance of ‘Generic1 Compose2’:
        Constructor ‘Comp2’ applies the parameter but the application
                            isn't of the the form (p (f p)) or (p c)
    • In the data declaration for ‘Compose2’
